--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -41,8 +41,8 @@ items:
   - CRMScript.Global.Void.encodeSHA256(String,String)
   - CRMScript.Global.Void.executeDbiAgentSchedule(Integer,Map)
   - CRMScript.Global.Void.executeMacro(String)
-  - CRMScript.Global.Void.executeScript(String,Map)
   - CRMScript.Global.Void.executeSQLQuery(String)
+  - CRMScript.Global.Void.executeScript(String,Map)
   - CRMScript.Global.Void.exitWithMessage(String)
   - CRMScript.Global.Void.faqSearch(Integer,Integer,String,Parser,Integer)
   - CRMScript.Global.Void.findReplyTemplateToMerge(Integer)
@@ -98,6 +98,7 @@ items:
   - CRMScript.Global.Void.getMainMenu()
   - CRMScript.Global.Void.getNtUser()
   - CRMScript.Global.Void.getNumHtmlElements()
+  - CRMScript.Global.Void.getPID()
   - CRMScript.Global.Void.getParser()
   - CRMScript.Global.Void.getParserParameter(String)
   - CRMScript.Global.Void.getParserParameter(String,Integer)
@@ -106,7 +107,6 @@ items:
   - CRMScript.Global.Void.getParserVariable(String,Integer)
   - CRMScript.Global.Void.getParserVariableAsCSV(String,Bool)
   - CRMScript.Global.Void.getParserVariableCount(String)
-  - CRMScript.Global.Void.getPID()
   - CRMScript.Global.Void.getPriorityIdFromName(String)
   - CRMScript.Global.Void.getProgram(Integer)
   - CRMScript.Global.Void.getProgramAdmin()
@@ -817,6 +817,7 @@ items:
   commentId: M:CRMScript.Global.Void.encodeBase64(Byte[],Bool)
   id: 'encodeBase64(Byte[],Bool)'
   so.intellisense: Void.encodeBase64
+  so.version: 8.4R05
   langs:
   - crmscript
   name: 'encodeBase64(Byte[],Bool)'
@@ -865,6 +866,7 @@ items:
   commentId: M:CRMScript.Global.Void.encodeBase64(NSStream,Bool)
   id: 'encodeBase64(NSStream,Bool)'
   so.intellisense: Void.encodeBase64
+  so.version: 8.5R08
   langs:
   - crmscript
   name: 'encodeBase64(NSStream,Bool)'
@@ -1136,6 +1138,7 @@ items:
   commentId: M:CRMScript.Global.Void.faqSearch(Integer,Integer,String,Parser,Integer)
   id: 'faqSearch(Integer,Integer,String,Parser,Integer)'
   so.intellisense: Void.faqSearch
+  so.version: 3.1.3
   langs:
   - crmscript
   name: 'faqSearch(Integer,Integer,String,Parser,Integer)'
