--- a/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactAgent.yml
@@ -457,6 +457,7 @@ items:
   commentId: M:CRMScript.NetServer.NSContactAgent.GetMyActiveContacts(DateTime,Integer[],Integer)
   id: 'GetMyActiveContacts(DateTime,Integer[],Integer)'
   so.intellisense: NSContactAgent.GetMyActiveContacts
+  so.version: 7.0
   langs:
   - crmscript
   name: 'GetMyActiveContacts(DateTime,Integer[],Integer)'
