--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -9,7 +9,6 @@ items:
     - CRMScript.Global.Date.#ctor
     - CRMScript.Global.Date.#ctor(Date)
     - CRMScript.Global.Date.#ctor(String)
-    - CRMScript.Global.Date.toString()
     - CRMScript.Global.Date.addDay(Integer)
     - CRMScript.Global.Date.addMonth(Integer)
     - CRMScript.Global.Date.addYear(Integer)
@@ -19,6 +18,7 @@ items:
     - CRMScript.Global.Date.getWeekDay()
     - CRMScript.Global.Date.getYear()
     - CRMScript.Global.Date.isNull()
+    - CRMScript.Global.Date.toString()
   name: Date
   nameWithType: Date
   fullName: CRMScript.Global.Date
@@ -222,6 +222,7 @@ items:
   commentId: M:CRMScript.Global.Date.getWeek()
   id: getWeek()
   so.intellisense: Date.getWeek
+  so.version: 3.1.8
   langs:
   - crmscript
   parent: CRMScript.Global.Date
