#56 added isHtmlDocument to String child list

--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -42,6 +42,7 @@ items:
     - CRMScript.Global.String.isAlphanumeric()
     - CRMScript.Global.String.isDigit()
     - CRMScript.Global.String.isEmpty()
+    - CRMScript.Global.String.isHtmlDocument()
     - CRMScript.Global.String.isLower()
     - CRMScript.Global.String.isNull()
     - CRMScript.Global.String.isNumber()
