#58 Added parameters and fixed formatting. (#59)

--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -63,7 +63,7 @@ items:
   nameWithType: Customer.addEmail(String,Integer,Integer)
   fullName: CRMScript.Native.Customer.addEmail(String,Integer,Integer)
   type: Method
-  summary: "\nAdds an email to a customerAdds an email to a customer.\n"
+  summary: "\nAdds an email to a customer.\n"
   remarks: "\n Commonly used in database integrations.<p></p>\nUse addEmail(String,Integer,Integer,Integer) to provide the external sorting rank.\n"
   syntax: 
     content: Void addEmail(String email, Integer extTable, Integer dbiAgentId)
@@ -94,7 +94,7 @@ items:
   summary: "\nAdds an email to a customer with the external sorting rank.\n"
   remarks: "\nCommonly used in database integrations.\n"
   syntax: 
-    content: Void addEmail()
+    content: Void addEmail(String email, Integer externalRank, Integer extTable, Integer dbiAgentId)
     parameters:
     - id: email
       type: CRMScript.Global.String
